tests/NormalTests/paczka1/fuzzy1/34401248.err
Error in line 4: qIRtGr S134 30,5
Error in line 10: Oiqw1k S134 89,6
Error in line 15: qIRtGr A69 72,
Error in line 19: sSmt2uAy3j A619 75,4
Error in line 26: S937 S937 11,4
Error in line 24: sSmt2uAy3j S134 39,6
Error in line 25: IT6TZ4yVg S937 132,2
Error in line 33: IT6TZ4yVg A619 67,4
Error in line 34: IT6TZ4yVg S134 17,9
